--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^3.1.2"
+    "@astrojs/react": "^3.0.2",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
+    "astro": "^3.1.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "sass": "^1.68.0"
   }
 }
